syntax = "proto3";

package msg;
option csharp_namespace = "ILChat";

import "google/protobuf/timestamp.proto";

message MessageDto {
  string id = 1;
  string content = 2;
  string senderId = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message FetchMessagesRequest {
  string conversationId = 1;
}

message FetchMessagesResponse {
  repeated MessageDto messages = 1;
}

message SendMessageRequest {
  string conversationId = 1;
  string content = 2;
}

message SendMessageResponse {
  MessageDto message = 1;
}

service MessageService {
  rpc FetchMessages(FetchMessagesRequest) returns (FetchMessagesResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}
